# ICalcCommunity

./: README.md  TODO  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ICalcCommunity.vue
src/components/static/: icon.css  nav_bar.css  style.css
