[package]
name = "i-calc-community"
version = "0.1.0"
description = "Simple Calc App with vue Front-end And Rust Back-end server"
authors = [ "Sebastian Luc" ]
license = "MiT"
repository = "https://github.com/LuceCompany/ICalcCommunity"
default-run = "i-calc-community"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "i-calc-community"
path = "src/main.rs"
